# Wally

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: build-appimage.yml
data/: com.qomarhsn.wally.desktop.in  com.qomarhsn.wally.metainfo.xml.in  meson.build  wally.gresource.xml
data/icons/: meson.build
data/schemas/: com.qomarhsn.wally.gschema.xml
data/ui/: preferences.ui
po/: meson.build
src/: application.cpp  application.h  main.cpp  meson.build  preferences-window.cpp  preferences-window.h  settings-manager.cpp  settings-manager.h  slideshow-manager.cpp  slideshow-manager.h
